@startuml
class Token {
    + prototypeType: PrototypeType
    + value: String?
    + from: Int
    + to: Int
    + line: Int
}
Token --> Lib
entity Ast {}

Ast --> Lib
Ast --> Token

class Parser {
    + parseTokens(tokens: Flow<Token>): ASTNode
}

Parser --> Lib
Parser --> Ast
Parser --> Token

class Lexer {
    + getTokens(codeFlow: Flow<String>): Flow<Token>
}

Lexer --> Lib
Parser --> Token

class Interpreter {
    + interpret(ast: ASTNode)
}

Interpreter --> Lib
Interpreter --> Ast
Interpreter --> Token

class Formatter {
    + getFormattedCode(node: ASTNode): String
}

Formatter --> Lib
Formatter --> Ast
Formatter --> Token

class Runner {
    + analyze(file: File, version: String,configFile: File)
    + format(file: File, version: String,configFile: File)
    + execute(file: File, version: String,printFunction: Function)
    + validate(file: File, version: String)
}

Runner --> Lib
Runner --> Ast
Runner --> Token
Runner --> Parser
Runner --> Lexer
Runner --> Interpreter
Runner --> Formatter
Runner --> Linter

class Cli {
    + analyze(absolutePath: String, version: String, arguments: String?)
    + format(absolutePath: String, version: String, arguments: String?)
    + execute(absolutePath: String, version: String, arguments: String?)
    + validate(absolutePath: String, version: String, arguments: String?)
}

Cli --> Runner
Cli --> Lib

class BuildSrc {
}

class Linter {
    +  getLintedCodeCorrection(node: ASTNode): String
}

Linter --> Lib
Linter --> Ast
Linter --> Token



@enduml
